--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Band Music</title>
     <link rel="icon" href="./assets/img/slider1.jpeg" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <li><a href="#tour">Tour</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
-                    <a href="">
+                    <a href="#">
                         More
                         <i class="nav-arrow-down ti-angle-down" ></i>
 
@@ -36,8 +37,12 @@
             <!-- Begin : Search Button -->
             <div class="search-btn">
                 <i class="search-icon ti-search"></i>
-
             </div>
+
+            <div id="mobile-menu" class="mobile-menu-btn">
+                <i class="menu-icon ti-menu"></i>
+            </div>
+
         </div>
 
         <!-- Slider -->
@@ -56,15 +61,15 @@
                 <p class="section-sub-heading">We love music</p>
                 <p class="about-content">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <div class="row member-list">
-                    <div class="col col-third text-center">
+                    <div class="mt-32 s-col-full col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/name.jpeg" alt="Name" class="member-img" >
                     </div>
-                    <div class="col col-third text-center">
+                    <div class="mt-32 s-col-full col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/name.jpeg" alt="Name" class="member-img" >
                     </div>
-                    <div class="col col-third text-center">
+                    <div class="mt-32 s-col-full col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/name.jpeg" alt="Name" class="member-img" >
                     </div>
@@ -88,35 +93,35 @@
                     <!-- Tour places -->
                     <div class="row places-list">
                         <!-- NYC-Tour -->
-                        <div class="col col-third ">
+                        <div class="col col-third s-col-full mt-16 ">
                             <img class="place-img" src="./assets/img/New York.jpeg" alt="New York">
                             <div class="place-body">
                                 <h4 class="place-heading">New York</h4>
                                 <p class="place-time">Fri 27 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="btn js-buy-tickets">Buy Tickets</button>
+                                <button class="btn s-width-full js-buy-tickets">Buy Tickets</button>
                             </div>
                         </div>
 
                         <!-- Paris-Tour -->
-                        <div class="col col-third ">
+                        <div class="col col-third s-col-full mt-16 ">
                             <img class="place-img" src="./assets/img/paris.jpeg" alt="Paris">
                             <div class="place-body">
                                 <h4 class="place-heading">Paris</h4>
                                 <p class="place-time">Sat 28 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="btn js-buy-tickets">Buy Tickets</button>
+                                <button class="btn s-width-full js-buy-tickets">Buy Tickets</button>
                             </div>
                         </div>
 
                         <!-- San Fancisco-Tour -->
-                        <div class="col col-third ">
+                        <div class="col col-third s-col-full mt-16 ">
                             <img class="place-img" src="./assets/img/sanfran.jpeg" alt="San Francisco">
                             <div class="place-body">
                                 <h4 class="place-heading">San Francisco</h4>
                                 <p class="place-time">Sun 29 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="btn js-buy-tickets">Buy Tickets</button>
+                                <button class="btn s-width-full js-buy-tickets">Buy Tickets</button>
                             </div>
                         </div>
                         <!-- <div class="clear"></div> -->
@@ -130,18 +135,18 @@
                 <p class="section-sub-heading">Fan? Drop a note!</p>
 
                 <div class="row contact-content">
-                    <div class="col col-half contact-info">
+                    <div class="col col-half contact-info s-col-full">
                         <p><i class="ti-location-pin"></i>Chicago, US</p>
                         <p><i class="ti-mobile"></i>Phone: +00 151515</p>
                         <p><i class="ti-email"></i>Email: mail@mail.com</p>
                     </div>
-                    <div class="col col-half contact-form">
+                    <div class="col col-half contact-form s-col-full">
                         <form action="">
                             <div class="row">
-                                <div class="col col-half">
+                                <div class="col col-half s-col-full">
                                     <input type="text" placeholder="Name" required name="" id="" class="form-control">
                                 </div>
-                                <div class="col col-half">
+                                <div class="col col-half s-col-full s-mt-8">
                                     <input type="email" placeholder="email" required name="" id="" class="form-control">
                                 </div>
                                 <!-- <div class="clear"></div> -->
@@ -151,7 +156,7 @@
                                     <input type="text" placeholder="Message" required name="" id="" class="form-control">
                                 </div>
                             </div>
-                            <input type="submit" class="btn pull-right mt-16" value="SEND">
+                            <input type="submit" class="contact-submit-btn btn pull-right mt-16 s-width-full" value="SEND">
                         </form>
                     </div>
                 </div>
@@ -221,7 +226,6 @@
         const modalClose=document.querySelector(".js-modal-close");
         const modalContainer=document.querySelector(".js-modal-container");
 
-
         function showBuyTickets(){
             modal.classList.add('open');
         }
@@ -239,6 +243,39 @@
         modalContainer.addEventListener("click",function(event){
             event.stopPropagation();
         });
+
+        // Mobile
+        let header=document.getElementById("header");
+        let mobileMenu=document.getElementById("mobile-menu");
+        let headerHeight=header.clientHeight;
+        
+        mobileMenu.onclick=function(){
+            let isClosed = header.clientHeight === headerHeight;
+            if(isClosed){
+                header.style.height="auto"
+            }else{
+                header.style.height= null;
+            }
+        }
+        
+        let menuItems=document.querySelectorAll('#nav li a[href*="#"]');
+        // console.log(menuItems)
+
+        for(i = 0 ; i < menuItems.length ; i++){
+            let menuItem= menuItems[i];
+            let isParentMenu = menuItem.nextElementSibling && menuItem.nextElementSibling.classList.contains('subnav');
+
+            menuItem.onclick=function(e){
+                if(!isParentMenu){
+                    header.style.height= null;
+                }
+                else{
+                    e.preventDefault();
+                }
+            }
+
+
+        }
 
 
     </script>
